# weapon_detection_app

./: .gitignore  README.md
client/: detection_window.py  login_window.py  pyproject.toml
client/ui/: login_window.ui
