[tool.poetry]
name = "client-side"
version = "0.1.0"
description = ""
authors = ["bagoviggo <bagoviggo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pyqt5 = "5.12.2"
requests = "^2.31.0"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
